# phish-target-recognition

./: .env.example  .gitignore  EVALUATION_RESULTS.md  README.md  augment_data.py  config.json  create_dataset.py  docker-compose.yml  file_operations.csv  justfile  pp_unique_targets.py  pyproject-poetry.toml  pyproject.toml  remove-dirs.py  script.py  target_mappings.json  vp-closest_file-counts.tsv  wrong_example_results.md
.github/: .pre-commit-config.yaml
data/processed/: bovw-codebook.pkl  phishIRIS.csv  phishpedia_benign.csv  phishpedia_phish.csv  visualphish-targets.csv  visualphish_new_phish.csv  visualphish_phish.csv  visualphish_trusted.csv
docs/: .gitignore  baseline-guide.md  datasets.md  docs-to-process.md  external-datasets.md  plan.md
docs/article/: article.tex
docs/readmes-todo/: README-user-guide.md  README.md  baseline-user-guide.md  eval-user-guide.md
eval-met-vp-dat-pp/: pp-result_detailed_results.csv  pp-result_metrics.json  vp-result_detailed_results.csv  vp-result_metrics.json  vp-result_summary_metrics.csv
eval-met-vp-dat-pp-dupa/: pp-result_summary_metrics.csv
mappings/: phishpedia-union-mapping.txt  phishpedia_targets.txt  phishpedia_targets_appearing_in_visualphish.txt  phishpedia_targets_not_appearing_in_visualphish.txt  pp-benign-phish-targets.json  pp-benign-targets.json  pp-benign-trusted-logos-targets.json  visualphish_newly_crawled_phishing_mapped.csv  visualphish_to_phishpedia_targets.json  vp-baseline-test-results.csv  vp-baseline-test.csv
mappings/model-phishpedia-dataset-phishpedia/: augument_benign.txt  augumentation_log.txt  split_data.txt
mappings/model-visualphish-dataset-visualphish/: augument-benign-for-vp.txt  augumentation_before_split_data.txt  augumentation_log-25.txt  filter-atleast-10-phish.txt  filter-atleast-25-phish.txt  split_data.txt
notebooks/: 000-phash-kmeans.ipynb  000-phash-kmens.ipynb  001-phash-kmeans-forced.ipynb  002-phash-umap.ipynb  003-phash-dbscan.ipynb  004-daisy.ipynb  005-1-codebook-for-bag-of-words.ipynb  005-bag-of-words.ipynb  006-bovw-testing.ipynb  0061-bovw-testing.ipynb  007-Phishpedia.ipynb  008-datasets-analisys.ipynb  009-phash-mockdataset.ipynb  010-visualphishnet.ipynb  011-visualphishnet-debug.ipynb  012-parse-phishpedia-results.ipynb  Evaluate.ipynb  Train_phase2 copy.ipynb  Train_phase2.ipynb  brand_mapping.csv
scripts/: VisualPhishNet.py  augment_data.py  calculate_eer_from_csv.py  combine_images.py  create_dataset.py  font_config.py  plot_confusion_three_sets.py  plot_density_three_sets.py  plot_eer_from_csv.py  plot_eer_from_json.py  plot_eer_from_json_seaborn.py  plot_metrics_barplot.py  prepare_data_for_organizer.py  prepare_sample_dataset.py  setup.sh  vp-setup.sh
scripts-data/metoda-bs/: cert-result.csv  vp-result.csv
scripts-data/metoda-pp/: cert-result.csv  pp-result.csv  vp-result.csv
scripts-data/metoda-vp/: cert-hist.json  cert-result.csv  pp-hist.json  pp-result.csv  vp-hist.json  vp-result.csv
src/: .pre-commit-config.yaml  SIFT_bovw.py  cert-dataset.py  config.py  create_symlinks.py  emd-fileprep.py  helpers.py  logging.conf  organize_by_sample.py  organize_by_target.py  organize_crossvalidation_splits_for_vp_by_target.py  organize_vp_by_target.py  phishIRIS-dataset.py  phishIRISData.py  plot.py  plot_pp.py  plot_vp.py  reverse_organize.py  website.py
src/api/: BaseModel.py  Dockerfile  ModelServing.py  PhishpediaServing.py  README.md  VisualPhishServing.py  app_factory.py  database.db  database.py  docker-compose.yml  lifespan.py  logging.conf  main.py  models.py  pyproject.toml  routes.py  run.py  schemas.py  settings.py  utils.py
src/api/example/: Dockerfile  ExampleServing.py
src/api/phishpedia/: Dockerfile  PhishpediaServing.py
src/api/tests/: conftest.py  test_database.py  test_routes.py  test_utils.py
src/api/visualphishnet/: Dockerfile  VisualPhishServing.py
src/cross_validation/: README.md  common.py  cv_splits.py  cv_validator.py  justfile  pyproject.toml
src/data_splitter/: README.md  filter_dataset.py  filter_visualphish.py  pyproject.toml  split_data.py
src/eval/: README.md  analysis.py  config.json  config_loader.py  data_processor.py  main.py  plot_generator.py  pyproject.toml  reporting.py  threshold_sweep.csv
src/eval/eval/: data_processor.py  main.py
src/models/baseline/: BaselineEmbedder.py  BaselineServing.py  Dockerfile  README.md  baseline.py  common.py  load.py  parse_results.py  parse_threshold_results.py  pyproject.toml  query.py  results_test_pp_summary.csv  results_test_vp_summary.csv  results_threshold_27.csv  results_val_pp_summary.csv  results_val_summary.csv  threshold_optimization.py  threshold_search_vp_summary.csv  validators.py
src/models/baseline/scripts/: README.md  dataset_config.py  evaluate_all_splits.py  evaluate_baseline.py  results_aggregator.py  split_processor.py  wandb_logger.py
src/models/phishpedia/: Dockerfile  PhishpediaServing.py  app.py  configs.py  convert_encodings.py  dataset_to_visualphish.py  eval.py  find_missing_files.py  fix_script.py  justfile  logo_matching.py  logo_recog.py  metrics.py  models.py  organize.py  parse_data.py  phishpedia.py  prepare_vp.py  pyproject.toml  text_recog.py  utils.py
src/models/phishpedia/scripts/: convert_encodings.py  dataset_to_visualphish.py  eval.py  eval_from_csv.py  find_missing_files.py  fix_script.py  metrics.py  organize.py  parse_data.py  parse_result.py  prepare_domain_mappings.py  prepare_vp.py
src/models/visualphishnet/: .dockerignore  DataHelper.py  Dockerfile  Dockerfile.inprogress  Evaluate.py  HardSubsetSampling.py  ModelHelper.py  README.md  RandomSampling.py  TargetHelper.py  VisualPhishServing.py  data.py  eval-new.py  eval-training.py  eval.py  eval_new.py  evaluate.py  evaluate_visualphishnet.py  generate_whitelist_filenames.py  logging.conf  parse_result.py  phase2.py  pyproject.toml  threshold_optimizer.py  trainer.py  trainer_phase2.py  triplet_sampling.py
src/tools/: config.py  pyproject.toml
src/tools/src/tools/: ModelServing.py  config.py  metrics.py
thesis/: .gitignore  bibliografia.bib  main.tex
(+16 files in other folders)
