[tool.poetry]
name = "phish-target-recognition"
version = "0.1.0"
description = ""
authors = ["Marcin Jarczewski"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notebook = "^7.2.2"
perception = "^0.7.7"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ruff = "^0.7.1"
datashader = "^0.16.3"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
joblib = "^1.4.2"
pydantic-settings = "^2.6.1"
streamlit = "^1.40.1"
torch = "^2.5.1"
torchutils = "^0.0.4"
umap-learn = "^0.5.7"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "data",
    "tmp"
]