[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.103.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
visualphishnet = [
    "tensorflow==2.13",
]
phishpedia = [
    "torch==1.9.0+cpu",
    "torchaudio==0.9.0",
    "torchvision==0.10.0+cpu",
    "detectron2==0.6+cpu"
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]