[project]
name = "data-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.6.1",
    "tools",
]

[tool.uv.sources]
tools = { path = "libs/tools-0.1.8-py3-none-any.whl" }
