[project]
name = "baseline"
version = "0.1.0"
description = "Baseline phishing detection service using perceptual hashing"
requires-python = ">=3.9,<3.10"
dependencies = [
    "perception>=0.6.8",
    "tools",
]

[tool.uv.sources]
tools = { path = "common/tools-0.1.8-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
