[project]
name = "baseline"
version = "0.1.0"
description = "Baseline phishing detection service using perceptual hashing"
requires-python = ">=3.9,<3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "pandas>=2.2.3",
    "perception>=0.6.8",
    "tools",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[tool.uv.sources]
tools = { path = "common/tools-0.1.8-py3-none-any.whl" }

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
]
