[project]
name = "phishpedia"
version = "0.1.0"
description = "Simplified implementation of 'Phishpedia: A Hybrid Deep Learning Based Approach to Visually Identify Phishing Webpages' USENIX'21'"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "fvcore>=0.1.5.post20221221",
    "gdown>=5.2.0",
    "lxml>=5.3.1",
    "memory-profiler>=0.61.0",
    "numpy==1.23.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow==8.4.0",
    "psutil>=7.0.0",
    "pycocotools>=2.0.8",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tldextract>=5.1.3",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
